[tool.poetry]
name = "api_client"
version = "0.1.1"
description = ""
authors = ["Alex Pirogov <pirogovalexand00@mail.ru>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 99
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["W503", "E704", "F541"]
exclude = [".git", ".venv", "*__pycache__*"]
count = true


[tool.black]
target-version = ["py312"]
line-length = 99
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 80
known_first_party = ["api_client"]
